--- a/Tweants.mw
+++ b/Tweants.mw
@@ -64,7 +64,9 @@ t Tweants wördt teegnweurdig stöarig an meender sprökn, umdat de oalders vand
 ==Indeling==
 Der is gen sproake van een en t zölfde dialekt. Wöarde en oetdrukkingn könt in alle döarpe of steedn verschiln. De dialektkeundige [[Jo Daan]] hef t Tweants oonderverdeeld in [[Oost-Tweants]] en [[Tweants-Groafschops]] (West-Tweants). t Tweants-Groafschops slot an biej t noordelike en oostelike [[Achterhooks]], terwiel at t oostelike Tweants völle oavereenkomsten hef met t dialekt van de zudelike [[Graofschop Benthem|groafschop Beantem]]. t West-Tweants (veural in [[Eanter]]) hef lösse, vrieje lettergrepe (bv. ''geevn'', ''tegel''), woar Oost-Tweants rechtevoort geslötne, korte klaankn hef (''gevven'', ''teggel''). n Aander vuurbeeld is t woard ''vogel'', wat in Oost-Tweants wörd oetsprökn as /{{IPA|'vɒɣəl}}/, en in West-Tweants as /{{IPA|vɔːɣəl}}/. De West-Tweantse variaantn [[Riessens]] en [[Eanters]] heb noar woarskeinlikheid nog oale westfaalse [[brekking (taal)|brekings]] behöaln, dee't vroger duur heel Tweante vuurkwamn: t Riessens sprekt "vogel" oet as /{{IPA|vɔəɣəl}}/ en t Eanters as /{{IPA|vuəɣəl}}/. 
 
-n Antal belangrieke [[isoglos]]sen (taalverskillienen) loopt tusken t oostelike Tweants en t Tweants-Groafschops, namelik de neet-nich-liene en de vuur-veur-liene. In t westn zegnt ze 'neet' en 'vuur' en in t oosten 'nich' en 'veur'. Wieder löp t gebroek van bepoalde wöarde slim oeteen. In Oost-Tweants hebt ze t oaver ne [[vroot]], terwiel at det in t West-Tweants ne ''weule'' het.
+Ook is de grammatika luk aans tusken Oost-Tweants en Tweants-Groafskops: in t Oost-Tweants is t voltooid deelwoard aait zoonder [[vuurplaksel]]: (bv. "Wie bint ''goan''" en "Wie hebt ''wunn''"). In t Tweants-Groafskops is det neet zo eendudig: as t vuurgoande woard eandigt in nen kleenker, dan hef t Tweants-Groafskops ook gin vuurplaksel, mer as t vuurgoande woord eandigt in nen metkleenker, dan keump dr ne sjwa tusken (/{{IPA|ə}}/). (bv. "Ik hebbe in de beuk'''e''' ''kekn'' en "Ik hebbe in n hook '''e'''''kekn'').
+
+n Antal belangrieke [[isoglos]]sen (taalverskillienen) loopt tusken t oostelike Tweants en t Tweants-Groafschops, namelik de neet-nich-liene en de vuur-veur-liene. In t westn zegnt ze 'neet' en 'vuur' en in t oosten 'nich' en 'veur' (In t Oost-Tweants is "ne veurdeure machtig duur" en in t Twents-Groafskops is "ne vuurdure machtig deur"). Wieder löp t gebroek van bepoalde wöarde slim oeteen. In Oost-Tweants hebt ze t oaver ne [[vroot]], terwiel at det in t West-Tweants ne ''weule'' het.
 
 Oonder dizze indeling he'j ok nog verskeaidene döarpsdialekte dee at allemaal nog wier van mekaar verskilt. Der beent ok n antal opvallende döarpsdialekte dee at nogal verskilt van de aandere Tweantse dialekte. De dialekte van [[Deanekaamp]], [[Oldenzel]] en omstreken gebroekt bievuurbeeld nich 'iej', mer 'doe' vuur n tweedn persoon eankelvoold. t [[Riesns]] en [[Eanters]] hebt Westfaalse brekingen, dee at woarskienlik vroger ok in de rest van Tweante vuurkwammen, mer t meest ofwiekend is t [[Vreeznvens]] (Vjens). Det hef namelik völle [[Sallaands]]erieje, mer ok biezoondere tweeklaanken, woarvan t neet dudelik is of dee duur t Frees of t Westfaals veroorzaakt beent. Duur t leste, heurt t Vreeznvens feailik noch biej t Tweants, noch biej t Sallaands.
 
