bot derbie: [[kk:Құйрықсыз қосмекенділер]]

--- a/Kikvors.mw
+++ b/Kikvors.mw
@@ -84,6 +84,7 @@ In landen as [[Frankriek]], [[China]] en midwesten van [[Amerika]] eten ze kikke
 [[ja:カエル]]
 [[jv:Kodhok]]
 [[ka:ბაყაყი]]
+[[kk:Құйрықсыз қосмекенділер]]
 [[ko:개구리목]]
 [[ku:Beq]]
 [[la:Anura]]
