--- a/Ooldehoorn.mw
+++ b/Ooldehoorn.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Map NL It Hearrenfean Aldehoarne.png|thumb|300px|Ooldehoorn]]
-'''Ooldehoorn''' ([[Nederlaands|Nederlaans]]: ''Oudehorne'', [[Fries]]: ''Aldhoarne'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit oostelik van et plak [[Et Vene (plak)|Et Vene]], an de N380, en het omdebi'j 850 inwoners (1 jannewaori 2004).
+'''Ooldehoorn''' ([[Nederlaands|Nederlaans]]: ''Oudehorne'', [[Westlaauwers Frais|Fries]]: ''Aldhoarne'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit oostelik van et plak [[Et Vene (plak)|Et Vene]], an de N380, en het omdebi'j 850 inwoners (1 jannewaori 2004).
 
 Tot de gemientelike herindieling van [[1934]] maekte Ooldehoorn, liekas et zusterdörp [[Ni'jehoorn]], diel uut van de gemiente [[Schoterlaand]].
 
