--- a/Hoornsterzwaog.mw
+++ b/Hoornsterzwaog.mw
@@ -1,5 +1,5 @@
 [[Image:Map NL It Hearrenfean Hoarnstersweach.png|thumb|300px|Hoornsterzwaog]]
-'''Hoornsterzwaog''' ([[Nederlaands|Nederlaans]]: ''Hoornsterzwaag'', [[Fries]]: ''Hoarnstersweach'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noordoosten van et plak [[Et Vene (plak)|Et Vene]], an de N380, en et het omdebi'j 890 inwoners (1 jannewaori 2004).
+'''Hoornsterzwaog''' ([[Nederlaands|Nederlaans]]: ''Hoornsterzwaag'', [[Westlaauwers Frais|Fries]]: ''Hoarnstersweach'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noordoosten van et plak [[Et Vene (plak)|Et Vene]], an de N380, en et het omdebi'j 890 inwoners (1 jannewaori 2004).
 
 Hoornsterzwaog warkt tegere mit [[Jubbege]]. Beide dörpen kennen een verieniginge ''Plaatselijk Belang Jubbega - Hoornsterzwaag'', die opricht is in [[1900]].
 
