--- a/Jubbege.mw
+++ b/Jubbege.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Map NL It Hearrenfean Jobbegea.png|thumb|300px|Jubbege]]
-'''Jubbege''' ([[Nederlaands|Nederlaans]]: ''Jubbega'', [[Fries]]: ''Jobbegea'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et oosten van et plak [[Et Vene (plak)|Et Vene]]. Op 1 jannewaori 2004 had Jubbege 3.270 inwoners, daormit is et nao Et Vene et grootste dörp van de gemiente. Jubbege het een hattekaamp waor hatten, geiten en enten rondlopen. Jubbege het ok veul bebossing.
+'''Jubbege''' ([[Nederlaands|Nederlaans]]: ''Jubbega'', [[Westlaauwers Frais|Fries]]: ''Jobbegea'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et oosten van et plak [[Et Vene (plak)|Et Vene]]. Op 1 jannewaori 2004 had Jubbege 3.270 inwoners, daormit is et nao Et Vene et grootste dörp van de gemiente. Jubbege het een hattekaamp waor hatten, geiten en enten rondlopen. Jubbege het ok veul bebossing.
 
 ==Bevolkingsontwikkeling==
 * [[2005]]: 3380 inwoners
