[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Bargum.mw
+++ b/Bargum.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Tytsjerksteradiel Burgum.png|thumb|300px|Bargum]]
-'''Bargum''' ([[Nederlaands|Nederlaans]]: ''Bergum'', [[Fries]]: ''Burgum'') is een dörp in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et is et heufdplak van de gemiente [[Tietjerksterediel]] (''Tytsjerksteradiel'') en et het zoe'n 10.074 inwoners. (1 jannewaori 2007)
+[[Ofbeelding:Map NL Tytsjerksteradiel Burgum.png|thumb|Bargum]]
+'''Bargum''' ([[Nederlaands|Nederlaans]]: ''Bergum'', [[Westlaauwers Frais|Fries]]: ''Burgum'') is een dörp in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et is et heufdplak van de gemiente [[Tietjerksterediel]] (''Tytsjerksteradiel'') en et het zoe'n 10.074 inwoners. (1 jannewaori 2007)
 
 Tot 1930 beheurde ok Noordbargum bi'j et dörp, dat doe een zelsstaandig dörp wodde. Sund 1989 is de officiële naeme van et dörp et Friestaelige ''Burgum'', vrogger was dat et Nederlaanse Bergum.
 
@@ -13,7 +13,7 @@ Tot 1930 beheurde ok Noordbargum bi'j et dörp, dat doe een zelsstaandig dörp w
 * [[2001]] - 9.149
 * [[1999]] - 9.148
 
-[[Kattegerie:Stellingwarfs_artikel]]
+[[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Plak in Frieslaand]]
 
 [[de:Burgum (Tytsjerksteradiel)]]
