--- a/Noordfrais.mw
+++ b/Noordfrais.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:Kartenordfriesischedialekte.GIF|thumb|Noordfraise dialekten]]
 [[Ofbeelding:Niebüll.JPG|thumb|Twijtoaleg ploatsnoambord Hoogduuts-Noordfrais van Niebüll]]
-'''Noordfrais''' (ploatselk: ''Frasch'' of ''Friisk'') is de benoamen veur de [[Fries|Fraise toal]] zo as t in [[Noordfraislaand]] in t zuden van de Deens-Duutse grìns proat wordt. t Noordfrais het "ffr" as [[ISO 639]]-3-toalkode. t Noordfrais bestaait oet n aantel hail oetainlopende [[dialekt]]en, mit as heufdindailen:
+'''Noordfrais''' (ploatselk: ''Frasch'' of ''Friisk'') is de benoamen veur de [[Freeske taaln|Fraise toal]] zo as t in [[Noordfraislaand]] in t zuden van de Deens-Duutse grìns proat wordt. t Noordfrais het "ffr" as [[ISO 639]]-3-toalkode. t Noordfrais bestaait oet n aantel hail oetainlopende [[dialekt]]en, mit as heufdindailen:
 
 # Aailaand-Noordfrais, proat op de aailaanden [[Föhr]] (''Feur'', t ''[[Fering]]''), [[Amrum]] (''Ammer'', t ''[[Öömrang]]''), [[Sylt]] (''Sult'', t ''[[Söl'ring]]'') en [[Helgolaand]] (''Hellegolaand'', t ''[[Helgolaands|Halunderfreesk]]'')
 # Vaastelaands-Noordfrais, proat op de [[Halligen]] (''Halle'', t ''[[Halligers|Halifreesk]]'') en in de [[Goesharden]] (t ''[[Goesharders|Gooshiirderfreesch]]''), de [[Bökingharde]] (t ''[[Mooring]]''), de [[Karrharde]] (t ''[[Karrharders|Karrhiirderfreesch]]'') en de [[Wiedingharde]] (t ''[[Wiedingharders|Wiringhiirderfreesk]]'')
