[[Fries]] → [[Westlaauwers Frais]]

--- a/Westfrais.mw
+++ b/Westfrais.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:LocatieWestfrais.png|thumb|250px|De lokoatsie van t Westfraise toalgebied in de Frieslanen]]
-t '''Westfrais''' is de toal van de [[Westfraizen|Westfraise]] bevôlken in [[Westfraislaand]]. t Is n soort tuzzentoal van t [[Fries|Frais]] en t [[Hollaands (dialekt)|Hollaands]]. t Westfrais mout nait verwaard worden mit de etnologische vertoalde woord veur de [[Westlaauwers Frais|Fraise toal annex t Westerlaauwers Frais]], [[West Frais]] (zai ook doar veur aandere begrippen soamensteld oet de woorden 'west' en 'Frais').
+t '''Westfrais''' is de toal van de [[Westfraizen|Westfraise]] bevôlken in [[Westfraislaand]]. t Is n soort tuzzentoal van t [[Westlaauwers Frais|Frais]] en t [[Hollaands (dialekt)|Hollaands]]. t Westfrais mout nait verwaard worden mit de etnologische vertoalde woord veur de [[Westlaauwers Frais|Fraise toal annex t Westerlaauwers Frais]], [[West Frais]] (zai ook doar veur aandere begrippen soamensteld oet de woorden 'west' en 'Frais').
 
 Deur t ontstoan van de [[Zuderzee]] en de loatere [[visserieje|viskerij]] en haandel tuzzen de hoavens van de Zuderzee is t Westfrais in toalgebroek onder invloud wèst van de [[Nedersaksisch|Leegsaksische]] zuderzeedialekten, môr ook deur de staarke baand mit t gewest Hollaand, en ook wel Zeelaand is t ook onder invloud west van dizze [[dialekt]]en. t Westfrais wordt vandoag de dag zain as n dialekt van t [[Nederlaands]].
 
