interwiki: [[en:West Frisian (creole language)]] → [[en:West Frisian dialect]]; +[[li:Wesfries]]

--- a/Westfrais.mw
+++ b/Westfrais.mw
@@ -48,6 +48,7 @@ Deur t ontstoan van de [[Zuderzee]] en de loatere [[visserieje|viskerij]] en haa
 [[Kattegerie:Grunnegs_artikel]]
 [[Kattegerie:Nederlaanse streektael en dialekt]]
 
-[[en:West Frisian (creole language)]]
+[[en:West Frisian dialect]]
 [[fy:Westfrysk]]
+[[li:Wesfries]]
 [[nl:Westfries]]
