--- a/Dankert_&_Dankert.mw
+++ b/Dankert_&_Dankert.mw
@@ -1,4 +1,4 @@
-'''Dankert & Dankert''' is een Friese [[regiosoap|pelisieserie]] over een advekaotetwieling, Pieter en Jelle Dankert. De thema's van de verhaelen bin baseerd op zaeken van de advekaotetweeling Hans en Wim Anker. De serie wodt maekt en regisseerd deur [[Steven de Jong]]. De dubbelde heufdrolle wodt speuld deur [[Peter Tuinman]]. De serie is [[Fries]]taelig, behalven dat pattie rollen van buten de perveensie aanders praoten en dat iederiene in de rechtzaol [[Nederlaands|Nederlaans]] praot.
+'''Dankert & Dankert''' is een Friese [[regiosoap|pelisieserie]] over een advekaotetwieling, Pieter en Jelle Dankert. De thema's van de verhaelen bin baseerd op zaeken van de advekaotetweeling Hans en Wim Anker. De serie wodt maekt en regisseerd deur [[Steven de Jong]]. De dubbelde heufdrolle wodt speuld deur [[Peter Tuinman]]. De serie is [[Westlaauwers Frais|Friestaelig]], behalven dat pattie rollen van buten de perveensie aanders praoten en dat iederiene in de rechtzaol [[Nederlaands|Nederlaans]] praot.
 
 [[Omrop Fryslân]] het de twie seizoenen uutzunnen, et eerste seizoen is opneumen in [[2005]], en de tillevisieuutzendings begonnen an et aende van november. Over hiel et seizoen hadden de ofleverings zoe'n 200.000 kiekers. Et twiede seizoen is in [[2006]] opneumen, van juli tot oktober, en wodde uutzunnen van [[9 jannewaori]] tot [[17 april]] [[2007]]. De [[KRO]] het de rechten veur de Nederlaanse tillevisie, en is van plan de serie van [[2 augustus]] tot [[6 september]] [[2007]] uut te zennen.
 
