--- a/Stellingwarf.mw
+++ b/Stellingwarf.mw
@@ -9,7 +9,7 @@ In een kotleden (2006) daon onderzuuk dee blieken dat de mooiste gebieden van al
 In et noorden stroomt de [[Kuunder]], deur et midden van Stellingwarf stroomt de [[Lende]].
 
 ==Geschiedenis==
-[[Ofbeelding:Map Bavaria-Straubing - Karte Straubing-Holland.png|250px|right|thumb|Kaorte van Midden-Europa in de middelieuwen waor de Kop van Overiessel nog bi'j Stellingwarf rekend wodt.]]
+[[Ofbeelding:Map Bavaria-Straubing - Karte Straubing-Holland.png|250px|right|thumb|Kaorte van Midden-Europa in de middelieuwen waor de Kop van Overiessel en Stellingwarf beide bie Frieslaand rekend wodden.]]
 Waor de Stellingwarvers oorspronkelik wegkommen is niet hielendal wisse. D'r bestaot een verhael, dat ze rond [[840]] veur ien van de kleinzeunen van [[Karel de Grote]] naor disse streek vlucht bin vanuut een streek in et zuden van [[Hannover]] in [[Duutslaand]]. 
 
 De naeme ''Stellingwarf'' wodt veur et eerst vermeld in [[1309]]. ''Warf'' betekent: plak waor recht spreuken wodt. En ''stelling'' betekent: bestuurder. Stellingwarf wodde bestuurd deur drie stellingen, die jaorliks keuzen wodden.
