--- a/Stavoren.mw
+++ b/Stavoren.mw
@@ -8,7 +8,8 @@ Nao die tied van verval kamen der in de 17e en 18e ieuw weer betere tieden, mit 
 Tegenwoordig is Stavoren de koppeling tussen et spoor naor Sneek en Liwwadden mit de boot naor Enkhuzen. De haoven is nu de thuusplak voor schepen van de brune vaort.
 
 ==Nedersaksisch==
-*[[Grunnegs]]: ''Stoarum''
+*[[Grunnegs]]: ''Stoavern''
+
 ==Galleri-je==
 <gallery>
 Ofbeelding:Stavoren_anzicht.jpg|Anzicht vanof et Iesselmeer.
