Interwiki: + als, bar, de, ksh, lb, li

--- a/Leegsaksische_orthogroafie.mw
+++ b/Leegsaksische_orthogroafie.mw
@@ -66,3 +66,9 @@ Ain ding is zeker: t Leegsaksisch het veul verschillende dialekten, en doarom zo
 [[Kattegerie:Nedersaksiese spellingsrichliene]]
 
 [[nds:Plattdüütsche Orthographie]]
+[[als:Hilfe:Schrybig]]
+[[bar:Wikipedia:Boarische Umschrift]]
+[[de:Bairische Umschrift]]
+[[ksh:Wikipedia:Schrievwies]]
+[[lb:Wikipedia:Eis Schreifweis]]
+[[li:Wikipedia:Sjpellingssjpiekpagina]]
