--- a/Nedersaksische_tiedschriften.mw
+++ b/Nedersaksische_tiedschriften.mw
@@ -10,7 +10,7 @@ Vanof de [[19e eeuw|nègentiende ieuw]] verschenen Nedersaksische verhaalties, g
 
 In de ''[[Driemaandelijkse Bladen|Driemaandelijks(ch)e Bladen voor taal en volksleven in het oosten van Nederland]]'', veur 't eerst uutegèven 1901 deur de Vereeniging tot onderzoek van Taal en Volksleven in het Oosten van Nederland, stund onderzuuk oaver 't Nedersaksisch. Ok vunden ie d'r Nedersaksischtalige verhalen in, zoas van de [[Zwolle|Zwollenaor]] [[Willem Kloeke]] (1852-1934).<ref>[http://www.wieiswieinoverijssel.nl/details2.asp?Id=122 Wie is wie in Overijssel: Willem Kloeke]</ref> D'r stunden woordenliesten in, zoas die van de Gelders-Oaveriesselse dialecten, an-elegd deur de 'Nedersaksische pionier' [[Johan Hendrik Gallée]] (1847-1908).<ref>[http://www.biografischwoordenboekgelderland.nl/bio/3_Johan_Hendrik_Gallee Biografisch Woordenboek Gelderland: Johan Hendrik Gallée]</ref> Ok naamkunde en de studie van Nedersaksische literetuur hadden een stee, en bi'jdrages die de samenhang van 't Nedersaksisch en 't [[Platduuts]] behaandelden.
 
-De ''Bladen'' stunden onder redactie van de Achterhoekers Gallée en [[Gerrit Jan Klokman]], bi'jestaone deur mitwarkers uut aandere Oost-Nederlaandse regio's. Vanof 1909 deu [[Jan Bergsma]] de redactie. In 't crisisjaor 1931 hölden de ''Bladen'' op te verschienen, mar een ni'je riege wördden op-ezet in 1949. Hierveur wördden een veriening op-ericht deur [[Hendrik Bezoen]] uut [[Twente]] en [[Jan Naarding]] uut Drenthe.
+De ''Bladen'' stunden onder redactie van de Achterhoekers Gallée en [[Gerrit Jan Klokman]], bi'jestaone deur mitwarkers uut aandere Oost-Nederlaandse regio's. Vanof 1909 deu [[Jan Bergsma]] de redactie. In 't crisisjaor 1931 hölden de ''Bladen'' op te verschienen, mar een ni'je riege wördden op-ezet in 1949. Hierveur wördden een veriening op-ericht deur [[Herman Bezoen]] uut [[Twente]] en [[Jan Naarding]] uut Drenthe.
 
 In 1955 wördden de ''Bladen'' 't orgaan van 't [[Nedersaksisch Instituut]] van de [[Rieksuniversiteit Grunning]]. In 2002 was 't vanni'js of-elopen mit de ''Driemaandelijkse Bladen''.<ref>[http://www.encyclopediedrenthe.nl/Driemaandelijkse%20Bladen Encyclopedie Drenthe Online oaver de Driemaandelijkse Bladen]</ref><ref>*Ludger Kremer (2008), 'Geschiedenis van de Nedersaksische taalkunde'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum</ref>
 
