--- a/Sunte-Marten_(feest).mw
+++ b/Sunte-Marten_(feest).mw
@@ -112,7 +112,7 @@ of:
 [[es:Fiesta de San Martín (Países Bajos)]]
 [[et:Mardipäev]]
 [[fi:Martinpäivä]]
-[[fy:Sint Marten]]
+[[fy:Sint Marten (dei)]]
 [[ksh:Märtesdaach]]
 [[la:Dies Sancti Martini]]
 [[nl:Sint-Maarten (feest)]]
