*Empty MediaWiki Message*

--- a/Hoog_Soeren.mw
+++ b/Hoog_Soeren.mw
@@ -1,4 +1,4 @@
-'''Hoog Soeren''', [[Nederlaands|Nederlans]]: ''Hoog Soeren'', is een därp in de Gelderse gemeente [[Apeldoorne (gemeente)|Apeldoorne]]. Hoog Soeren lig in 't wessen van Apeldoorne, op de [[Veluwe]] en hef 190 inwoners (2008).
+'''Hoog Soeren''', [[Nederlaands|Nederlans]]: ''Hoog Soeren'', is een därp in de [[Gelderlaand|Gelderse]] gemeente [[Apeldoorne (gemeente)|Apeldoorne]]. Hoog Soeren lig in 't wessen van Apeldoorne, op de [[Veluwe]] en hef 190 inwoners (2008).
 
 ==Uutgaonde verwiezingen==
 * [http://www.hoogsoeren.info/homepage.htm Dorpsraad Hoog Soeren] (Nederlans)
