--- a/Hoenderloo.mw
+++ b/Hoenderloo.mw
@@ -5,6 +5,7 @@
 
 [[Kattegerie:West-Veluws artikel]]
 [[Kattegerie:Plaose in Gelderlaand]]
+[[Kattegerie:Veluwe]]
 
 [[de:Hoenderloo]]
 [[en:Hoenderloo]]
