--- a/Börger-Oring.mw
+++ b/Börger-Oring.mw
@@ -96,6 +96,7 @@ Overige officiële kernen:
 [[Kattegerie:Drèents artikel]]
 [[Kattegerie:Gemiente in Drenthe]]
 
+[[af:Borger-Odoorn]]
 [[br:Borger-Odoorn]]
 [[ca:Borger-Odoorn]]
 [[de:Borger-Odoorn]]
