[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Bildts.mw
+++ b/Bildts.mw
@@ -2,7 +2,7 @@ Et '''Bildts''' is een [[Nederlaand|Nederlaanse]] [[streektael]].
 
 Et wodt algemien indield bi'j et [[Hollaand|Hollaans]]. Et wodt praot in de gemiente [[Et Bildt]] in [[Frieslaand|Noord-Frieslaand]].
 
-Et Bildts is ontstaon naodat in [[1505]] de oolde [[Middelzee]] veerder inpoolderd wodde deur Hollaanse heren. Daor kwam ok et warkvolk vot, zo van rond [[Werkendam]], Zuud-Hollaand, om de bedieking te doen. Een diel kwam ok in de ni'je poolder wonen. Deur de vermenging van de Zuud-Hollaanse dialecten die zi'j oorspronkelik praotten en et [[Fries]] van de poolderbewoners van de omliggende gebieden is et Bildts ontstaon.
+Et Bildts is ontstaon naodat in [[1505]] de oolde [[Middelzee]] veerder inpoolderd wodde deur Hollaanse heren. Daor kwam ok et warkvolk vot, zo van rond [[Werkendam]], Zuud-Hollaand, om de bedieking te doen. Een diel kwam ok in de ni'je poolder wonen. Deur de vermenging van de Zuud-Hollaanse dialecten die zi'j oorspronkelik praotten en et [[Westlaauwers Frais|Fries]] van de poolderbewoners van de omliggende gebieden is et Bildts ontstaon.
 
 Et Bildts wodt praot in de plakken ''Sint-Anne'', (Stellingwarfs: [[Sunt Anneperochie]]), ''Sint-Jabik'' ([[Sunt Jekobiperochie]]), ''Froubuurt'' ([[Vrouwenperochie]]), ''Ouwe-Syl'' ([[Ooldebildtziel]]), ''De Westhoek'' ([[Westhoek (Friesland)|Westhoek]]) en [[Ni'j Altoenae]].
 Allienig in de kern [[Minnertsge]] (Fries: Minnertsgea), die niet in et pooldergebied ligt en pas sund de gemientelike herindieling van [[1984]] tot de gemiente Et Bildt beheurt, wodt Fries praot.
