--- a/Stavoren.mw
+++ b/Stavoren.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Het Vrouwtje van Stavoren.jpg|thumb|150px|[[Et vrouwgien van Stavoren]]]]
-'''Stavoren''' ([[Fries]]: ''Starum'' of ''Staveren''), is een stattien in de gemiente [[Ni'jeferd]], mit 996 inwoners (1 jannewaori 2003). De stad leit op de zuudwestpunt van [[Frieslaand]] en is an drieje kaanten beheind deur et waeter van et Iesselmeer.
+'''Stavoren''' ([[Westlaauwers Frais|Fries]]: ''Starum'' of ''Staveren''), is een stattien in de gemiente [[Ni'jeferd]], mit 996 inwoners (1 jannewaori 2003). De stad leit op de zuudwestpunt van [[Frieslaand]] en is an drieje kaanten beheind deur et waeter van et Iesselmeer.
 
 Stavoren is ien van de [[Friese elf steden]]. De stad is al rond et jaer [[900]] ontstaon en kreeg in 1118 stadsrechten van Hindrik V. Et was een handelstad van belang, mit hannel tot in Engelaand en Zweden. In [[1385]] werd Stavoren dan ook lid van de Hanze. Aan et end van de Middeleeuwen raokte de stad in verval. Op dit feit is et verhaol [[It Frouke fan Starum]] (''Et vrouwgien van Stavoren'') baseerd.
 
