[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Oelebred.mw
+++ b/Oelebred.mw
@@ -2,7 +2,7 @@
 
 [[Ofbeelding:Uilenbord Midden-Friesland.jpg|thumb|250px|Een oelebred op een boerderi'je in Midden-Frieslaand]]
 
-Een '''oelebred''' ([[Fries]]: ''ûleboerd'') is in [[Frieslaand]], [[Grunnen (provìnzie)|Grunning]], [[Drenthe]] en de [[Kop van Oaveriessel]] een dreikaantig bred an de [[gèvel|gevel]] van de [[schure]] van [[boerderieje|boerderi'jen]].
+Een '''oelebred''' ([[Westlaauwers Frais|Fries]]: ''ûleboerd'') is in [[Frieslaand]], [[Grunnen (provìnzie)|Grunning]], [[Drenthe]] en de [[Kop van Oaveriessel]] een dreikaantig bred an de [[gèvel|gevel]] van de [[schure]] van [[boerderieje|boerderi'jen]].
 
 De dreihoek van holt, op 't heden ok van kunststof, stiet in de boabenhoek van de gevel. Dit diel van 't schuurdak had 't miest verlet van bescharming teeng smerrig weer as wiend en reeng. In de dreihoek kan een gat of meerdere gatten zitten, 't oelegat (Fries: ''ûlegat''). Hierdeur kunden [[katoele]]n tussen bred en daok een nussien maken. De katoele was welkom um in de schure op [[moes (dier)|moezen]] te jagen. Zoas de uutdrokking gunk: 'Hja frette mûzen en sûpe gjin molke', hi'j vret moezen en zöp gien melk. Mar in Frieslaand is 't gat now miestentied dicht-emeuken mit een 'zunnerad' (kiekt hierunder).
 
