--- a/Sunt-Jehannesge.mw
+++ b/Sunt-Jehannesge.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Skarsterlân Sint Jansgea.png|thumb|250px|Ligging van Jehannesge]]
-'''Jehannesge''' of '''Sint-Jehannesge''' ([[Nederlaands|Nederlaans]]: ''Sintjohannesga'', [[Fries]]: ''Sint Jansgea'', in de volksmond ''Sint Jut'') is een dörp in et zuden van de gemiente [[Scharsterlaand]], in de [[Nederland|Nederlaanse]] perveensie [[Frieslaand]]. Et dörp het omdebi'j 1.100 inwoners. 
+[[Ofbeelding:Map NL Skarsterlân Sint Jansgea.png|thumb|Ligging van Jehannesge]]
+'''Jehannesge''' of '''Sint-Jehannesge''' ([[Nederlaands|Nederlaans]]: ''Sintjohannesga'', [[Westlaauwers Frais|Fries]]: ''Sint Jansgea'', in de volksmond ''Sint Jut'') is een dörp in et zuden van de gemiente [[Scharsterlaand]], in de [[Nederland|Nederlaanse]] perveensie [[Frieslaand]]. Et dörp het omdebi'j 1.100 inwoners. 
 
 Jehannesge vormt eins een twielingdörp mit [[Rotsterhaule]]. De dörpen warken dan ok tegere op vule terreinen, zoas op et gebied van schoelen, karken en verienigings. Jehannesge is vernuumd naor de karke in et dörp, die wijded is an de heilige Jehannes. Disse karke staot hier al jaoren niet meer. Wel staot d'r in de buurt nog een meulen: [[De Hersteller (Jehannesge)|De Hersteller]].
 
