--- a/Luxwoolde.mw
+++ b/Luxwoolde.mw
@@ -1,7 +1,7 @@
-[[Ofbeelding:Map NL Opsterlân Lúkswâld.png|thumb|250px|Ligging van Luxwoolde]]
-'''Luxwoolde''' ([[Nederlaands|Nederlaans]]: ''Luxwoude'', [[Fries]]: ''Lúkswâld'') is een dörp in de  [[gemiente (bestuur)|gemiente]] [[Opsterlaand]], in de [[Nederlaand|Nederlaanse]] [[pervincie|perveensie]] [[Frieslaand]]. Et leit in et westen van [[Gorrediek]] en had in 2004 omdebi'j 290 inwoners.
+[[Ofbeelding:Map NL Opsterlân Lúkswâld.png|thumb|Ligging van Luxwoolde]]
+'''Luxwoolde''' ([[Nederlaands|Nederlaans]]: ''Luxwoude'', [[FWestlaauwers Frais|ries]]: ''Lúkswâld'') is een dörp in de  [[gemiente (bestuur)|gemiente]] [[Opsterlaand]], in de [[Nederlaand|Nederlaanse]] [[pervincie|perveensie]] [[Frieslaand]]. Et leit in et westen van [[Gorrediek]] en had in 2004 omdebi'j 290 inwoners.
 
-[[Kattegerie:Stellingwarfs_artikel]]
+[[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Plak in Frieslaand]]
 
 [[en:Luxwoude]]
