[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]]); of toch [[Freeske taaln]]?

--- a/Goaitsen_van_der_Vliet.mw
+++ b/Goaitsen_van_der_Vliet.mw
@@ -3,7 +3,7 @@
 ==Kiek op 't Twèents==
 Van der Vliet, die sund zien studententied in [[Eanske]] woont, hef 't gebruuk van de streektaal op slim veule manieren verni'jd en is daorbi'j niet bange um de knuppel in 't hoenderhokke te gooien. Hi'j stiet bekend as iene die vake zien helligheid utert oaver de algemiene gewoonte um de streektaal te reserveren veur 'folklore en kritiekloze ophemmeling van anneke-bestemoorstied'<ref>[http://members.home.nl/goaitsen/dnt/01tgeeta.htm Redactiebeleid van ''De Nieje Tied'']</ref>, en um dizze taal koste wat kost marginaal te holden (beveurbield aj eneugd wördt veur de viering van een dialectmaond mit een folder die van kop töt starte in 't 'Hooghaarlemmerdieks' eskreben is).<ref>[http://members.home.nl/goaitsen/twents/toek.htm Goaitsen van der Vliet, ''Over de toekomst van het Twents]</ref>
 
-Bi'j zien benaodering van 't Twèents lat Van der Vliet hum inspireren deur hoe as d'r mit 't [[Fries]] as cultuurtaal wördt ummesprungen. Hi'j had in 1977 in Eanske al de oprichter ewest van de eerste Friestalige rockband, [[Rockploech Spul]].
+Bi'j zien benaodering van 't Twèents lat Van der Vliet hum inspireren deur hoe as d'r mit 't [[Westlaauwers Frais|Fries]] as cultuurtaal wördt ummesprungen. Hi'j had in 1977 in Eanske al de oprichter ewest van de eerste Friestalige rockband, [[Rockploech Spul]].
 
 ==Uutgeveri'je en skrieveri'je==
 Mit zien ienmansbedrief De Oare útjouwerij (D'aandere uutgeveri'je) gef Van der Vliet literatuur, poëzie, bieldende kuunst, streektaalwark, geleengheidswark en (sund 1994) 't 'Blad in t plat' ''[[De Nieje Tied]]'' uut. De uutgeveri'je publiceert in 't Twèents, Fries en Nederlaans en huust in [[Eanske]]. Een bekende uutgave, die an 't begun stund van Van der Vliet zien interesse veur 't Twèents, is ''Heftan tattat! (gedichn in t stadsplat)'' van [[Willem Wilmink]] (1992).<ref>[http://members.home.nl/dou/ Webstee van De Oare útjouwerij]</ref>
