--- a/Haskerlaand.mw
+++ b/Haskerlaand.mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:Haskerland in 1933.png|thumb|250px|Haskerlaand tot 1934]]
-[[Ofbeelding:Haskerland in 1983.png|thumb|250px|Gemientegreenzen van Haskerlaand van 1934 tot 1983]]
-'''Haskerlaand''' ([[Fries]]: ''Haskerlân'') is een veurmaolige [[gemiente (bestuur)|gemiente]] in et zuden van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. De gemiente beston tot [[1984]].
+[[Ofbeelding:Haskerland in 1933.png|thumb|Haskerlaand tot 1934]]
+[[Ofbeelding:Haskerland in 1983.png|thumb|Gemientegreenzen van Haskerlaand van 1934 tot 1983]]
+'''Haskerlaand''' ([[Westlaauwers Frais|Fries]]: ''Haskerlân'') is een veurmaolige [[gemiente (bestuur)|gemiente]] in et zuden van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. De gemiente beston tot [[1984]].
 
 De naeme Haskerlaand verwiest oorspronkelik naor ''haske'' of ''heesc'': een grössoorte. Een populairdere verklaoring onder de bevolking was dat et woord van et [[Fries]]e ''haske'' komt, dat ''haezien'' betekent. 
 
@@ -9,7 +9,7 @@ In [[1934]] raekte de gemiente een stok laand in et oosten van et hudige [[Ni'je
 Nao de [[gemientelike herindieling]] op [[1 jannewaori]] [[1984]] is Haskerlaand saemen mit de gemiente [[Doniawerstal]] opgaon in de ni'je gemiente [[Scharsterlaand]], officieel sund [[1985]] Friestaelig ''Skarsterlân''. Allienig een klein pat in et zuudwesten mit et dörp [[Delfstrehuzen]] is bi'j de gemiente [[Lemsterlaand]] gaon.
 
 ==Plakken (1983)==
-[[Ofbeelding:Haskerland.gif|thumb|right|200px|De vlagge van Haskerlaand]]
+[[Ofbeelding:Haskerland.gif|thumb|right|De vlagge van Haskerlaand]]
 De gemiente Haskerlaand had dartien dörpen. Et heufdplak was [[De Jouwer]].
 {|
 |-
