[[Fries|]] → [[Freeske taaln|]]

--- a/West-Germoanse_toalen.mw
+++ b/West-Germoanse_toalen.mw
@@ -26,7 +26,7 @@ n Probleem mit dizze indailen is, dat der minder let wordt op de [[dialektiek|di
 * Ingveoons (Noordzee-Germoans)
 ** [[Engels]]
 ** [[Schots]]
-** [[Fries|Frais]]
+** [[Freeske taaln|Frais]]
 ** [[Nedersaksisch|Leegsaksisch]]
 ** [[Oostleegduuts]]
 ** [[Plautdietsch]]
