--- a/Holwerd.mw
+++ b/Holwerd.mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:Map NL Dongeradiel Holwert.png|thumb|250px|Lekaosie Holwerd]]
-[[Ofbeelding:De Hoop molen Holwerd 01.jpg|thumb|250px|[[De Hoop (Holwerd)|Meulen De Hoop]] (2003)]]
-'''Holwerd''' ([[Fries]]: ''Holwert'') is een dörp in de gemiente [[Dongerediel]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], en het omdebi'j 1.650 inwoners. Et dörp is daormit et grootste dörp van Dongerediel.
+[[Ofbeelding:Map NL Dongeradiel Holwert.png|thumb|Lekaosie Holwerd]]
+[[Ofbeelding:De Hoop molen Holwerd 01.jpg|thumb|[[De Hoop (Holwerd)|Meulen De Hoop]] (2003)]]
+'''Holwerd''' ([[Westlaauwers Frais|Fries]]: ''Holwert'') is een dörp in de gemiente [[Dongerediel]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], en het omdebi'j 1.650 inwoners. Et dörp is daormit et grootste dörp van Dongerediel.
 
 In et noorden van Holwerd hej' de belangriekste veerdienst van en naor et eilaand [[Amelaand (eilaand)|Amelaand]]. In Holwerd is ok et ontvangststesjon van de [[melkleiding]] van de verienigde boeren van [[Amelaand]].
 
