--- a/Irnsum.mw
+++ b/Irnsum.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Boarnsterhim Jirnsum.png|thumb|250px|Kaorte van Irnsum]]
-'''Irnsum''' ([[Fries]]: ''Jirnsum'') is een dörp in de gemiente [[Boornsterhem]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et dörp het omdebi'j 1.300 inwoners.
+[[Ofbeelding:Map NL Boarnsterhim Jirnsum.png|thumb|Kaorte van Irnsum]]
+'''Irnsum''' ([[Westlaauwers Frais|Fries]]: ''Jirnsum'') is een dörp in de gemiente [[Boornsterhem]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et dörp het omdebi'j 1.300 inwoners.
 
 Tot de [[gemientelike herindieling]] in [[1984]] beheurde Irnsum (veurhenne ok wel ''Eernsum'' nuumd) bi'j de veurmaolige gemiente [[Rauwerderhem]], vernuumd naor ien van de Friese Hempoolders. Sund 1989 is de officiële naeme et Friestaelige ''Jirnsum''.
 
