--- a/Ooldeouwer.mw
+++ b/Ooldeouwer.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding: Map NL Skarsterlân Alde Ouwer.png|thumb|300px|Ligging van Ooldeouwer]]
-'''Ooldeouwer''' ([[Nederlaans]]: ''Oldeouwer'', [[Fries]]: ''Alde Ouwer'') is een dörp in de gemiente [[Scharsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noorden van et [[Tjeukemeer]], en had in [[2004]] omdebi'j 80 inwoners. Een echte dörpskoeme het et dörp niet meer.
+[[Ofbeelding: Map NL Skarsterlân Alde Ouwer.png|thumb|Ligging van Ooldeouwer]]
+'''Ooldeouwer''' ([[Nederlaans]]: ''Oldeouwer'', [[Westlaauwers Frais|Fries]]: ''Alde Ouwer'') is een dörp in de gemiente [[Scharsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noorden van et [[Tjeukemeer]], en had in [[2004]] omdebi'j 80 inwoners. Een echte dörpskoeme het et dörp niet meer.
 
 Tot de [[gemientelike herindieling]] van [[1 jannewaori]] [[1984]] maekte Ooldeouwer diel uut van de veurmaolige gemiente [[Doniawerstal]] die op dezelde daotum opheven wodde.
 
