[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Terbaand.mw
+++ b/Terbaand.mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:Map NL It Hearrenfean Terbant.png|thumb|300px|Terbaand]]
-[[Ofbeelding:Rotondekerk Terband 06c.JPG|thumb|300px|Rotondekarke]]
-'''Terbaand''' ([[Nederlaans]]: ''Terband'', [[Fries]]: ''Terbant'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noorden van et plak [[Et Vene (plak)|Et Vene]] bi'j et knooppunt Et Vene, en had in [[2004]] omdebi'j 290 inwoners.
+[[Ofbeelding:Map NL It Hearrenfean Terbant.png|thumb|Terbaand]]
+[[Ofbeelding:Rotondekerk Terband 06c.JPG|thumb|Rotondekarke]]
+'''Terbaand''' ([[Nederlaans]]: ''Terband'', [[Westlaauwers Frais|Fries]]: ''Terbant'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noorden van et plak [[Et Vene (plak)|Et Vene]] bi'j et knooppunt Et Vene, en had in [[2004]] omdebi'j 290 inwoners.
 
 Tot de [[gemientelike herindieling]] van [[1934]] vormde Terbaand mit de dörpen [[Gersloot]], [[Luunjeberd]], en [[Tjalleberd]] de gemiente [[Aengwirden]]. De vier dörpen wodden nog de hieltied ''Aengwirden'', of ''De Streek'' nuumd.
 
