[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Luunjeberd.mw
+++ b/Luunjeberd.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL It Hearrenfean Lúnbert.png|thumb|300px|Luunjeberd]] 
-'''Luunjeberd''' ([[Nederlaans]]: ''Luinjeberd'', [[Fries]]: ''Lúnbert'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], van de [[Nederlaand|Nederlaanse]] perveensie [[Friesland]]. Et leit in et noorden van et plak [[Et Vene (plak)|Et Vene]], en had in [[2004]] omdebi'j 450 inwoners.
+[[Ofbeelding:Map NL It Hearrenfean Lúnbert.png|thumb|Luunjeberd]] 
+'''Luunjeberd''' ([[Nederlaans]]: ''Luinjeberd'', [[Westlaauwers Frais|Fries]]: ''Lúnbert'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], van de [[Nederlaand|Nederlaanse]] perveensie [[Friesland]]. Et leit in et noorden van et plak [[Et Vene (plak)|Et Vene]], en had in [[2004]] omdebi'j 450 inwoners.
 
 Tot de [[gemientelike herindieling]] van [[1934]] vormde Luunjeberd mit de dörpen [[Gersloot]], [[Terbaand]] en [[Tjalleberd]] de gemiente [[Aengwirden]]. De vier dörpen wodden nog de hieltied ''Aengwirden'', of ''De Streek'' nuumd. 
 
