[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Tjalleberd.mw
+++ b/Tjalleberd.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL It Hearrenfean Tsjalbert.png|thumb|300px|Tjalleberd]]
-'''Tjalleberd''' ([[Fries]]: ''Tsjalbert'') is een dörp in de [[gemiente (bestuur)|gemiente]] [[Et Vene (gemiente)|Et Vene]], van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et had in [[2006]] omdebi'j 737 inwoners. Et plak [[Et Vene (plak)|Et Vene]] het uutbreidingsplannen veur een ni'je woonwiek bi'j Tjalleberd en de dörpelingen bin bange dat et dörp gauw een onderdiel van de stad zal wodden.
+[[Ofbeelding:Map NL It Hearrenfean Tsjalbert.png|thumb|Tjalleberd]]
+'''Tjalleberd''' ([[Westlaauwers Frais|Fries]]: ''Tsjalbert'') is een dörp in de [[gemiente (bestuur)|gemiente]] [[Et Vene (gemiente)|Et Vene]], van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et had in [[2006]] omdebi'j 737 inwoners. Et plak [[Et Vene (plak)|Et Vene]] het uutbreidingsplannen veur een ni'je woonwiek bi'j Tjalleberd en de dörpelingen bin bange dat et dörp gauw een onderdiel van de stad zal wodden.
 
 Tot de [[gemientelike herindieling]] van [[1934]] vormde Tjalleberd mit de dörpen [[Gersloot]], [[Luunjeberd]] en [[Terbaand]] de gemiente [[Aengwirden]]. De vier dörpen wodden nog de hieltied ''Aengwirden'', of ''De Streek'' nuumd.
 
