[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Haskerhorne.mw
+++ b/Haskerhorne.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding: Map NL Skarsterlân Haskerhoarne.png|thumb|300px|Haskerhorne]]
-'''Haskerhorne''' ([[Fries]]: ''Haskerhoarne'', plaetselik ok wel ''De Hoarne'' nuumd) is een dörp in de gemiente [[Scharsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et zuudoosten van [[De Jouwer]], in et zuden van de [[A7]]. Haskerhorne had in [[2004]] omdebi'j 490 inwoners.
+[[Ofbeelding: Map NL Skarsterlân Haskerhoarne.png|thumb|Haskerhorne]]
+'''Haskerhorne''' ([[Westlaauwers Frais|Fries]]: ''Haskerhoarne'', plaetselik ok wel ''De Hoarne'' nuumd) is een dörp in de gemiente [[Scharsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et zuudoosten van [[De Jouwer]], in et zuden van de [[A7]]. Haskerhorne had in [[2004]] omdebi'j 490 inwoners.
 
 De naeme zol verwiezen naor de hoeke ("horne") van Haskerlaand, waor et dörp leit. Haskerhorne beheurde in de [[middelieuwen]] tot de [[grieteni'je]] [[Haskerfiifgea]]. Tot de [[gemientelike herindieling]] op 1 jannewaori 1984 beheurde Haskerhorne tot de gemiente [[Haskerlaand]].
 
