[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Mildam.mw
+++ b/Mildam.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding: Map NL It Hearrenfean Mildaam.png|thumb|300px|Mildam]]
-'''Mildam''' ([[Fries]]: ''Mildaam'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Friesland]]. Et dörp leit in et oosten van [[Et Vene (plak)|Et Vene]] an de Schoterlaanseweg in een bosrieke omgeving en an de noordziede van de revier de [[Kuunder]]. 
+[[Ofbeelding: Map NL It Hearrenfean Mildaam.png|thumb|Mildam]]
+'''Mildam''' ([[Westlaauwers Frais|Fries]]: ''Mildaam'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Friesland]]. Et dörp leit in et oosten van [[Et Vene (plak)|Et Vene]] an de Schoterlaanseweg in een bosrieke omgeving en an de noordziede van de revier de [[Kuunder]]. 
 
 In Mildam zit de Tjongerschoele (basisonderwies) en de Ekokattedraal van [[Louis le Roy]]. Op et karkhof staot ok ien van de [[klokkestoelen in Frieslaand]].
 
