[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Ni'jeschoot.mw
+++ b/Ni'jeschoot.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL It Hearrenfean Nijskoat.png|thumb|250px|Ni'jeschoot]]
-'''Ni'jeschoot''' ([[Nederlaands|Nederlaans]]: ''Nieuweschoot'', [[Fries]]: ''Nijskoat'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], krekt onder et plak [[Et Vene (plak)|Et Vene]] in de [[Nederlaand|Nederlaanse]] [[perveensie]] [[Frieslaand]]. Et dörp het een inwonerantal van 149 ([[1 jannewaori]] [[2003]]). De nederzetting is bouwd op een glaciaole zaandrogge. De naeme is ofleided van 'Schoot', wat 'hooglegen laand' betekent.
+[[Ofbeelding:Map NL It Hearrenfean Nijskoat.png|thumb|Ni'jeschoot]]
+'''Ni'jeschoot''' ([[Nederlaands|Nederlaans]]: ''Nieuweschoot'', [[Westlaauwers Frais|Fries]]: ''Nijskoat'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], krekt onder et plak [[Et Vene (plak)|Et Vene]] in de [[Nederlaand|Nederlaanse]] [[perveensie]] [[Frieslaand]]. Et dörp het een inwonerantal van 149 ([[1 jannewaori]] [[2003]]). De nederzetting is bouwd op een glaciaole zaandrogge. De naeme is ofleided van 'Schoot', wat 'hooglegen laand' betekent.
 
 Langes Ni'jeschoot, an de westziede, lopt de [[Engelevaort]]. An de noordziede greenst et an de woonwiek en rekreasiegebied De Heide in Et Vene.
 
