[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Gersloot.mw
+++ b/Gersloot.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding: Map NL It Hearrenfean Gersleat.png|thumb|250px|Ligging van Gersloot]]
-'''Gersloot''' ([[Fries]]: ''Gersleat'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noorden van et plak [[Et Vene]], en het omdebi'j 292 inwoners (1 jannewaori 2006).
+[[Ofbeelding: Map NL It Hearrenfean Gersleat.png|thumb|Ligging van Gersloot]]
+'''Gersloot''' ([[Westlaauwers Frais|Fries]]: ''Gersleat'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noorden van et plak [[Et Vene]], en het omdebi'j 292 inwoners (1 jannewaori 2006).
 
 Tot de [[gemientelike herindieling]] van [[1934]] vormde Gersloot mit de dörpen [[Luunjeberd]], [[Terbaand]] en [[Tjalleberd]] de gemiente [[Aengwirden]]. De vier dörpen wodden nog de hieltied ''Aengwirden'' of ''De Streek'' nuumd.
 
