--- a/Oranjewoold.mw
+++ b/Oranjewoold.mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:Map NL It Hearrenfean It Oranjewâld.png|thumb|300px|Ligging van Oranjewoold]]
-[[Ofbeelding:Oranjewoud_bebouwdekom.png|thumb|300px|Twietaelig bod van Oranjewoold]]
-'''Oranjewoold''' ([[Nederlaands|Nederlaans]]: ''Oranjewoud'', [[Fries]]: ''It Oranjewâld'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Oranjewoold leit in et oosten van et plak [[Et Vene]]. Oranjewoold leit an de westkaante van et bosrieke [[Parkgebied Oranjewoold]].
+[[Ofbeelding:Map NL It Hearrenfean It Oranjewâld.png|thumb|Ligging van Oranjewoold]]
+[[Ofbeelding:Oranjewoud_bebouwdekom.png|thumb|Twietaelig bod van Oranjewoold]]
+'''Oranjewoold''' ([[Nederlaands|Nederlaans]]: ''Oranjewoud'', [[Westlaauwers Frais|Fries]]: ''It Oranjewâld'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Oranjewoold leit in et oosten van et plak [[Et Vene]]. Oranjewoold leit an de westkaante van et bosrieke [[Parkgebied Oranjewoold]].
 
 Oranjewoold daankt zien naeme an de anwezighied van de ''Oranjes''.
 In [[1676]] kocht, prinses van Oranje [[Albertine Agnes van Oranje-Nassau]], wedevrouw van [[Willem Frederik van Nassau-Dietz]], een laandgoed en gaf hieran de naeme [[Laandgoed Oranjewoold|Oranjewoold]].
