[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/De_Kniepe.mw
+++ b/De_Kniepe.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL It Hearrenfean De Knipe.png|thumb|300px|De Kniepe]]
-'''De Kniepe''' ([[Nederlaands|Nederlaans]]: ''De Knijpe'', [[Fries]]: ''De Knipe'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], in et oosten van et plak [[Et Vene (plak)|Et Vene]]. 
+[[Ofbeelding:Map NL It Hearrenfean De Knipe.png|thumb|De Kniepe]]
+'''De Kniepe''' ([[Nederlaands|Nederlaans]]: ''De Knijpe'', [[Westlaauwers Frais|Fries]]: ''De Knipe'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], in et oosten van et plak [[Et Vene (plak)|Et Vene]]. 
 Hoewel de gemiente Et Vene veur alle aandere officiële plakken de Nederlaanse plaknaemen bruukt, is veur De Kniepe de Friese naeme de officiële.
 
 Deur et dörp lopt de [[Schoterlaanse Kompejonsvaort]]. Hierin lag een kniepe, een versmalling in de vaort, en daoran daankt et dörp De Kniepe zien naeme. De Kniepe was tot [[1970]] opsplitst in ''Bovenkniepe'' en ''Benedenkniepe'' en wodde doe vaeke kotweg ''De Kniepe'' nuumd. Doe in 1970 de twie dörpen saemenvoegd wodden, kreeg et dörp de naeme De Knipe. 
