[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]]); upright

--- a/Wienjewoolde.mw
+++ b/Wienjewoolde.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Klokkenstoel Wijnjewoude 09cw.JPG|thumb|150px|Klokkestoel]]
-'''Wienjewoolde''' ([[Nederlaans]]: ''Wijnjewoude'', [[Fries]]: ''Wynjewâld'') is een dörp in de gemiente [[Opsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et dörp dat tussen [[Oosterwoolde]] en [[Drachten]] in leit het omdebi'j 2.050 inwoners.  
+[[Ofbeelding:Klokkenstoel Wijnjewoude 09cw.JPG|thumb|upright|Klokkestoel]]
+'''Wienjewoolde''' ([[Nederlaans]]: ''Wijnjewoude'', [[Westlaauwers Frais|Fries]]: ''Wynjewâld'') is een dörp in de gemiente [[Opsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et dörp dat tussen [[Oosterwoolde]] en [[Drachten]] in leit het omdebi'j 2.050 inwoners.  
 Et is ien van de ooldere boerenederzettings in Opsterlaand en leit op de hogere zaandroggen.
 De omgeving is parkachtig en daordeur rekreatief antrekkelik. Zo hej' [[Duurswoolder Heide]] in et oosten van Wienjewoolde. 
 
