[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Oosterzee-Gietersebrogge.mw
+++ b/Oosterzee-Gietersebrogge.mw
@@ -1,4 +1,4 @@
-'''Oosterzee-Gietersebrogge''' ([[Nederlaans]]: ''Oosterzee-Gietersebrug'', [[Fries]]: ''Eastersee-Giterskebrêge'') is een dörp in [[Lemsterlaand]]. Tegere mit [[Oosterzee-Buren]] vormt et et dörp [[Oosterzee]]. Gietersebrogge het zoe'n 450 inwoners (1 jannewaori 2004).
+'''Oosterzee-Gietersebrogge''' ([[Nederlaans]]: ''Oosterzee-Gietersebrug'', [[Westlaauwers Frais|Fries]]: ''Eastersee-Giterskebrêge'') is een dörp in [[Lemsterlaand]]. Tegere mit [[Oosterzee-Buren]] vormt et et dörp [[Oosterzee]]. Gietersebrogge het zoe'n 450 inwoners (1 jannewaori 2004).
 
 In pattie atlassen staot de plaknaeme Gietersebrogge wel vermeld, mar de inwoners zels numen et gewoon ''Oosterzee''. Et dörp daankt zien naeme an de aktiviteiten van [[Gieteren]] in dit gebied.
 
