[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Schiermonnikoogs.mw
+++ b/Schiermonnikoogs.mw
@@ -65,8 +65,8 @@ Et Schiermonnikoogs is een unieke vorm van et Fries, die stark ofwiekt van de Fr
 Een veurbeeld van de invloed van et Nedersaksisch, veural et [[Hogelaands|Hogelaans]] en et [[Westerkertiers]], is et vaeke veurkommen van de typisch Hogelaanse klaanken "ai" en "au".
 
 == Verschillen mit et Standerdfries ==
-[[Ofbeelding:Aailaanders.png|thumb|250px|De lekaosie van et Schiermonnikoogse dialekt in et Friese taelgebied.]]
-Et Schiermonnikoogs is een nogal behooldende vorm van et [[Fries]]; zo maekt et in zien grammatika nog onderscheid tussen drie geslaachten, een verschiensel dat in et Standerdfries allange niet meer veurkomt. Ok de spelling wiekt wat of van et Standerdfries, mit bi'jgelieks "ië" waor et  Standerdfries "ie" veur het, behalven in de kombinaosie "ier".
+[[Ofbeelding:Aailaanders.png|thumb|De lekaosie van et Schiermonnikoogse dialekt in et Friese taelgebied.]]
+Et Schiermonnikoogs is een nogal behooldende vorm van et [[Westlaauwers Frais|Fries]]; zo maekt et in zien grammatika nog onderscheid tussen drie geslaachten, een verschiensel dat in et Standerdfries allange niet meer veurkomt. Ok de spelling wiekt wat of van et Standerdfries, mit bi'jgelieks "ië" waor et  Standerdfries "ie" veur het, behalven in de kombinaosie "ier".
 
 Aandere verschillen bin bi'jgelieks de klaankleer. Zo het et Schiermonnikoogs:
 * "au" veur "â"; vergeliek "''saun''"-"sân" (zaand), "''laun''"-"lân" (laand), "''haun''"-"hân" (haand), "''braun''"-"brân" (braand) en "''straun''"-"strân" (straand);
