[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Hindeloopers.mw
+++ b/Hindeloopers.mw
@@ -1,4 +1,4 @@
-Et '''Hindeloopers''' ([[Fries]]: ''Hylpersk'') is et archaïsche [[Freeske taaln|Friese dialekt]] van et haevenstadtien [[Hindeloopen]] an de westkust van de [[Nederlaand|Nederlaanse]] [[perveensie]] [[Frieslaand]]. Et het een slim behooldende klaankleer en woordeschat, waoj' een protte [[Ooldfries]]e woorden in weerommevienen kunnen. Et wodt nog praot deur zoe'n 300 meensken, die meerstal al wat oolder binnen. Et antal sprekers lopt ok rap terogge.
+Et '''Hindeloopers''' ([[Westlaauwers Frais|Fries]]: ''Hylpersk'') is et archaïsche [[Freeske taaln|Friese dialekt]] van et haevenstadtien [[Hindeloopen]] an de westkust van de [[Nederlaand|Nederlaanse]] [[perveensie]] [[Frieslaand]]. Et het een slim behooldende klaankleer en woordeschat, waoj' een protte [[Ooldfries]]e woorden in weerommevienen kunnen. Et wodt nog praot deur zoe'n 300 meensken, die meerstal al wat oolder binnen. Et antal sprekers lopt ok rap terogge.
 
 == Schrieftael ==
 Et Hindeloopers is in alle gevallen al van de [[17e ieuw]] of schriftelik overleverd. In [[1981]] verscheen et ''Hylper Wurdboek'' (Hindelooper Woordeboek) as onderdiel van de ''Rige Fryske Dialektstúdzjes'' van de [[Fryske Akademy]].
