[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]]) (nog es)

--- a/Hindeloopers.mw
+++ b/Hindeloopers.mw
@@ -27,7 +27,7 @@ In de spelling hej' ok nog twie aandere verschillen, deurdat et Hindeloopers uut
 
 D'r bin ok een peer lexikaole verschillen; bi'jgelieks: "''siie''" veur "naaie", "''tät''" veur "happe" (in de zin van kiendertael veur "kiepe") en "''öie''" veur "sipel". In de woordeschat van et dialekt bin een protte woorden beweerd bleven die in et Nederlaans en in et Fries niet meer bruukt wodden.
 
-De verschillen in uutspraoke en woordeschat tussen et Hindeloopers en et Standerdfries bin zo groot dat de onderlinge verstaonberhied in gevaor komt. Een steekproef leut zien dat et Hindeloopers staorigan naor et Standerdfries toebewegt, dit komt lichtkaans deur et toenemende kontakt en et verhuzen van sprekers van aandere [[Fries]]e dialekten naor Hindeloopen.
+De verschillen in uutspraoke en woordeschat tussen et Hindeloopers en et Standerdfries bin zo groot dat de onderlinge verstaonberhied in gevaor komt. Een steekproef leut zien dat et Hindeloopers staorigan naor et Standerdfries toebewegt, dit komt lichtkaans deur et toenemende kontakt en et verhuzen van sprekers van aandere [[Westlaauwers Frais|Fries]]e dialekten naor Hindeloopen.
 
 == Veurbield ==
 As veurbield van et Hindeloopers de eerste riegels van ''Bittersweet'', de Hindelooperse versie uut et Bitterswietperjekt, mit daoronder dezelde tekst in et Standerdfries.
