--- a/Tjerkgaast.mw
+++ b/Tjerkgaast.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Skarsterlân Tsjerkgaast.png|thumb|250px|Tjerkgaast]]
-'''Tjerkgaast''' ([[Fries]]: ''Tsjerkgaast'') is een dörp in de  gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in de uterste zuudwestpunt van de gemiente, in et noordwesten van [[Sloten (Frieslaand)|Sloten]], en had in [[2004]] omdebi'j de 190 inwoners.
+[[Ofbeelding:Map NL Skarsterlân Tsjerkgaast.png|thumb|Tjerkgaast]]
+'''Tjerkgaast''' ([[Westlaauwers Frais|Fries]]: ''Tsjerkgaast'') is een dörp in de  gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in de uterste zuudwestpunt van de gemiente, in et noordwesten van [[Sloten (Frieslaand)|Sloten]], en had in [[2004]] omdebi'j de 190 inwoners.
 
 Tot de [[gemientelike herindieling]] van [[1 jannewaori]] [[1984]], beheurde et tot de gemiente [[Doniawerstal]]. De [[buurtschop]] [[Spannenborg]] vaalt onder et dörp. In de naeme verwiest ''tsjerk'' naor de [[karke (gebouw)|karke]], die oorspronkelik an [[Augustinus van Hippo|Sunt-Augustinus]] wijded was,  en ''gaast'' naor een [[zaandrogge]] of hooglegen [[zaand]]erige grond.
 
