--- a/Ouwsterhaule.mw
+++ b/Ouwsterhaule.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Skarsterlân Ousterhaule.png|thumb|300px|Ligging van Ouwsterhaule]]
-'''Ouwsterhaule''' ([[Fries]]: ''Ousterhaule'') is een dörp in de gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Ouwsterhaule leit in et zuden van [[De Jouwer]] en in et oosten van de [[A6]], en had in [[2004]] omdebi'j de 300 inwoners.
+[[Ofbeelding:Map NL Skarsterlân Ousterhaule.png|thumb|Ligging van Ouwsterhaule]]
+'''Ouwsterhaule''' ([[Westlaauwers Frais|Fries]]: ''Ousterhaule'') is een dörp in de gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Ouwsterhaule leit in et zuden van [[De Jouwer]] en in et oosten van de [[A6]], en had in [[2004]] omdebi'j de 300 inwoners.
 
 De naeme verwiest naor ''oever'' ("ouwer") en ''heugte'' ("haule"). Et dörp het een [[middelieuwen|middelieuws]] karkien. Et vormt mit [[Ooldeouwer]] en [[Ouwster-Ni'jege]] de [[Ouster Trijegea]], feitelik een [[drielingdörp]].
 
