[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Vegelinsoord.mw
+++ b/Vegelinsoord.mw
@@ -1,12 +1,12 @@
-[[Ofbeelding:Map NL Skarsterlân Vegelinsoard.png|thumb|300px|Ligging van Vegelinsoord]]
-'''Vegelinsoord''' ([[Fries]]: ''Vegelinsoard'') is een dörp in de  gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noordoosten van [[De Jouwer]] an et [[Ni'je Veense Kenaol]], en had in [[2003]] omdebi'j de 400 inwoners. 
+[[Ofbeelding:Map NL Skarsterlân Vegelinsoard.png|thumb|Ligging van Vegelinsoord]]
+'''Vegelinsoord''' ([[Westlaauwers Frais|Fries]]: ''Vegelinsoard'') is een dörp in de  gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noordoosten van [[De Jouwer]] an et [[Ni'je Veense Kenaol]], en had in [[2003]] omdebi'j de 400 inwoners. 
 
 De naeme ''Vegelinsoord'' is te herleiden naor de femilie [[Vegelin van Claerbergen]], die in de regio een grote rolle speuld het. Et dörp hiet pas sund [[1955]] zo, daorveur hiette et ''Stobbegat,'' en kot veur de naemsveraandering een hottien ''Stobbege''.
 
 Tot de [[gemientelike herindieling]] van [[1 jannewaori]] [[1984]] maekte et diel uut van de gemiente [[Haskerlaand]].
 
 ==Beziensweerdigheden==
-[[Ofbeelding:Grevensmolen 06.JPG|thumb|left|300px|Grevensmeulen]]
+[[Ofbeelding:Grevensmolen 06.JPG|thumb|left|Grevensmeulen]]
 
 {{Coordinate |NS=52/59/57/N |EW=5/51/50/E |type=city |region=NL-FR}}
 
