--- a/Ouwster-Ni'jege.mw
+++ b/Ouwster-Ni'jege.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Skarsterlân Ousternijegea.png|thumb|300px|Ligging van Ouwster-Ni'jege]]
-'''Ouwster-Ni'jege''' ([[Nederlaans]]: ''Ouwster-Nijega'', [[Fries]]: ''Ousternijegea'') is een dörp in de gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et zuden van [[De Jouwer]] en in et oosten van de [[A6]], niet veer van et [[Tjeukemeer]] of.  Et dörp had in [[2004]] omdebi'j de 100 inwoners.
+[[Ofbeelding:Map NL Skarsterlân Ousternijegea.png|thumb|Ligging van Ouwster-Ni'jege]]
+'''Ouwster-Ni'jege''' ([[Nederlaans]]: ''Ouwster-Nijega'', [[Westlaauwers Frais|Fries]]: ''Ousternijegea'') is een dörp in de gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et zuden van [[De Jouwer]] en in et oosten van de [[A6]], niet veer van et [[Tjeukemeer]] of.  Et dörp had in [[2004]] omdebi'j de 100 inwoners.
 
 De naeme verwiest naor ''oever'' ("ouwer"). Et dörp is opricht vanuut [[Ooldeouwer]] waormit et in feite een [[twielingdörp]] vormt dat tegere mit [[Ouwsterhaule]] de [[Ouster Trijegea]] vormt. D'r staot ok ien van de [[klokkestoelen in Frieslaand]].
 
