[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Ni'j_Beets.mw
+++ b/Ni'j_Beets.mw
@@ -1,5 +1,5 @@
 {{Coordinate|NS=53/4/11/N|EW=6/0/10/E|type=city|dim=3000|region=NL-FR|map=right|maplevel=adm1st|article=/}}
-'''Ni'j Beets''' ([[Nederlaans]]/[[Fries]]: ''Nij Beets'') is een dörp in de gemiente [[Opsterlaand]]. Et plak leit in et midden van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], omdebi'j 12 kilemeter in et zuudwesten van [[Drachten]]. Et dörp het roem 1600 inwoners.
+'''Ni'j Beets''' ([[Nederlaans]]/[[Westlaauwers Frais|Fries]]: ''Nij Beets'') is een dörp in de gemiente [[Opsterlaand]]. Et plak leit in et midden van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], omdebi'j 12 kilemeter in et zuudwesten van [[Drachten]]. Et dörp het roem 1600 inwoners.
 
 ==Geschiedenis==
 Ni'j Beets is sticht in [[1863]] deur veenarbeiders. De veenarbeiders kwammen rond 1860 naor Ni'j Beets om et [[vene (grondsoorte)|vene]] van de veenbaozen [[vervenen|of te greven]] en d'r [[törf|turf]] van te maeken. De veenarbeiders verdienden haost niks en mossen in hoolten hutten wonen die ze vaeke zels bouwen mossen. Ok boten waormit eerder turf vervoerd wodde, mar die daor niet meer bruukbaor veur weren, wodden zo inricht dat ze d'r konnen wonen.
