[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Hemrik.mw
+++ b/Hemrik.mw
@@ -1,4 +1,4 @@
-'''Hemrik''' ([[Fries]]: ''De Himrik'') is een [[dörp]]ien in de gemiente [[Opsterlaand]] van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et het een peer honderd inwoners.
+'''Hemrik''' ([[Westlaauwers Frais|Fries]]: ''De Himrik'') is een [[dörp]]ien in de gemiente [[Opsterlaand]] van de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et het een peer honderd inwoners.
 
 In et centrum van Hemrik staot een [[12e ieuw]]s karkien, omgeven deu een [[begreefplak]] mit grafkelder van een rieke femilie. Hier staot ok ien van de [[klokkestoelen in Frieslaand]].
 
