--- a/Snikzwaog.mw
+++ b/Snikzwaog.mw
@@ -1,5 +1,5 @@
-[[Image:Map NL Skarsterlân Sniksweach.png|thumb|250px|Snikzwaog]]
-'''Snikzwaog''' ([[Nederlaans]]: ''Snikzwaag'', [[Fries]]: ''Sniksweach'') is et kleine laondörpien tussen [[De Jouwer]] en [[Akmariep]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. 
+[[Image:Map NL Skarsterlân Sniksweach.png|thumb|Snikzwaog]]
+'''Snikzwaog''' ([[Nederlaans]]: ''Snikzwaag'', [[Westlaauwers Frais|Fries]]: ''Sniksweach'') is et kleine laondörpien tussen [[De Jouwer]] en [[Akmariep]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. 
 
 Tegere mit [[Ni'jehaske]], [[Ooldehaske]], [[Haskerhorne]] en [[Westermeer]] maekte et diel uut van et oolde gebied ''Haskerviefga'', en is et ien van de ooldere nederzettings van de veurmaolige gemiente [[Haskerlaand]].
 
