[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Bakkevene.mw
+++ b/Bakkevene.mw
@@ -1,10 +1,10 @@
-[[Ofbeelding:Map_NL_Opsterlân_Bakkefean.png|thumb|250px|Ligging van Bakkevene]]
-'''Bakkevene''' ([[Nederlaans]]: ''Bakkeveen'', [[Fries]]: ''Bakkefean'') is een dörp in de [[gemiente (bestuur)|gemiente]] [[Opsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Bakkevene leit kotbi'j [[Drachten]], en had in [[2008]] zoe'n 1961 inwoners. Bakkevene is een typisch [[forens]]endörp en vule inwoners bin veur et wark richt op plakken as [[Drachten]], [[Liwwadden]], [[Et Vene]] en (wat minder) op [[Grunningen]] en [[Assen]].
+[[Ofbeelding:Map_NL_Opsterlân_Bakkefean.png|thumb|Ligging van Bakkevene]]
+'''Bakkevene''' ([[Nederlaans]]: ''Bakkeveen'', [[Westlaauwers Frais|Fries]]: ''Bakkefean'') is een dörp in de [[gemiente (bestuur)|gemiente]] [[Opsterlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Bakkevene leit kotbi'j [[Drachten]], en had in [[2008]] zoe'n 1961 inwoners. Bakkevene is een typisch [[forens]]endörp en vule inwoners bin veur et wark richt op plakken as [[Drachten]], [[Liwwadden]], [[Et Vene]] en (wat minder) op [[Grunningen]] en [[Assen]].
 
 Et dörp wodde veur et eerst nuumd as de plak waor in [[1231]] de Friezen en [[Drenthe|Drenten]] een veldslag uutvochten. Tiedens de [[Tachtigjaorige Oorlog]] wodde et dörp deur de Spanjaarden verwoest. Et hudige Bakkevene is ontstaon tiedens de [[Vervening|veenontginning]] in [[1660]].
 
 == Netuur ==
-[[Ofbeelding:Heidebakkeveen.JPG|thumb|250px|[[Heed (vegetasie)|Heide]] bi'j Bakkevene]]
+[[Ofbeelding:Heidebakkeveen.JPG|thumb|[[Heed (vegetasie)|Heide]] bi'j Bakkevene]]
 Bakkevene leit middenin een bosriek gebied mit heide- en zaandvlakten dat op de greens leit mit [[Grunnen (provìnzie)|Grunningen]] en [[Drenthe]]. D'r wodt wel zegd dat Bakkevene et ienigste [[brinkdörp]] in Frieslaand is, hoewel et niet dudelijk is of disse [[Brink (dörpsplein)|brink]] dezelde oorsprong het as die van dörpen in [[Drenthe]]. 
 Bakkevene leit in et oostelijke stroomgebied van et reviertien [[Boorne|Keuningsdiep]] dat in et noordoosten van Bakkevene ontspringt. Et beekdal van et Keuningsdiep wodt opni'j inricht waorbi'j de beek zien oorspronkelike kronkelende loop weerommekrigt. 
 
